feat(user-svc): Implement user management service with CRUD operations
- Added UserService for user registration, retrieval, update, password change, and soft deletion.
- Integrated password hashing using Argon2id.
- Implemented MiniDSClientService for interaction with MiniDS Directory Server.
- Created application.yml for configuration settings.

feat(vault-svc): Introduce vault service for EMV tokenization

- Developed VaultService for tokenization and detokenization of PANs.
- Implemented AES-256-GCM encryption for secure storage of PANs.
- Created REST API endpoints for tokenization and detokenization.
- Added VaultTokenRepository for managing vault tokens in MiniDS.
- Configured application.yml for vault service settings.